# meow-sdk

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: api-reference.md  cli.md  dashboards.md  errors.md  getting-started.md  index.md  raspberry-pi.md
meow_sdk/: __init__.py  cli.py  client.py  exceptions.py
tests/: test_cli.py  test_client.py
